# plataforma-sustentabilidade-contratacoes-publicas

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  manage.py  pyproject.toml
.claude/: settings.json
apps/conteudo/: admin.py  apps.py  models.py  urls.py  views.py
apps/core/: admin.py  apps.py  context_processors.py  models.py
apps/criterios/: admin.py  apps.py  facets.py  models.py  search.py  urls.py  views.py
apps/exportacao/: apps.py  docx_gen.py  pdf.py  urls.py  views.py
apps/normas/: admin.py  apps.py  models.py
apps/pilotos/: admin.py  apps.py  models.py
apps/seed/: apps.py
docker/: docker-compose.prod.yml  docker-compose.yml
docker/app/: Dockerfile
docs/: ACESSIBILIDADE.md  ARCHITECTURE.md  DEPLOY.md  IDENTIDADE_VISUAL.md  IMPORTACAO_SEED.md  LGPD_E_LAI.md  MODELO_DE_DADOS.md  QUESTIONS.md  ROADMAP_V2.md
pescp/: asgi.py  urls.py  wsgi.py
pescp/settings/: __init__.py  base.py  dev.py  prod.py
seeds/: README.md  pescp_seed_template.xlsx
static/css/: sp-design-system.css  style.css
static/js/: main.js
templates/: base.html  home.html
templates/_partials/: _aviso_versao_inicial.html  _banner_cookies.html  _banner_lai.html  _barra_govsp.html  _facetas.html  _header_institucional.html  _icons_sprite.html  _menu_principal.html  _paginacao.html  _rodape_institucional.html  _skip_links.html
templates/conteudo/: contato.html  glossario.html  governanca.html  parceiros.html  (+4 more)
tests/: conftest.py  test_home_destaque.py  test_objeto_list_destaque.py
tools/: audit_a11y.py  gerar_seed_template.py
(+26 files in other folders)
