[project]
name = "pescp"
version = "0.1.0"
description = "Plataforma Estadual de Sustentabilidade em Contratações Públicas — Governo do Estado de São Paulo"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1,<6.0",
    "psycopg2-binary>=2.9",
    "gunicorn>=22.0",
    "django-environ>=0.11",
    "django-csp>=3.8,<4.0",
    "django-simple-history>=3.7",
    "django-import-export>=4.0",
    "openpyxl>=3.1",
    "weasyprint>=62",
    "python-docx>=1.1",
    "whitenoise>=6.7",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-django>=4.9",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "django-debug-toolbar>=4.4",
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pescp.settings.dev"
python_files = ["test_*.py", "tests.py"]
addopts = "-ra --strict-markers"
testpaths = ["apps", "tests"]
